--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Strona główna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddCar">Dodaj samochód</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Dodaj samochód</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddClient">Dodaj klienta</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Dodaj klienta</a>
                         </li>
                     </ul>
                 </div>
