working with identity

--- a/CarRental/Views/Shared/_LoginPartial.cshtml
+++ b/CarRental/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using CarRental.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<CarRentalUser> SignInManager
+@inject UserManager<CarRentalUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
