--- a/CarRental/Views/Car/Index.cshtml
+++ b/CarRental/Views/Car/Index.cshtml
@@ -1,8 +1,91 @@
-﻿@{
-    ViewData["Title"] = "Dodaj samochód";
+﻿@model List<CarRental.Models.CarModel> 
+ <html>  
+<head>  
+ <meta name="viewport" content="width=device-width" />  
+<title>Index</title>  
+<style type="text/css">
+    table.greenTable {
+  font-family: Georgia, serif;
+  border: 6px solid #24943A;
+  background-color: #D4EED1;
+  width: 100%;
+  text-align: center;
+}
+table.greenTable td, table.greenTable th {
+  border: 1px solid #24943A;
+  padding: 3px 2px;
+}
+table.greenTable tbody td {
+  font-size: 13px;
+}
+table.greenTable thead {
+  background: #24943A;
+  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  border-bottom: 0px solid #444444;
+}
+table.greenTable thead th {
+  font-size: 19px;
+  font-weight: bold;
+  color: #F0F0F0;
+  text-align: left;
+  border-left: 2px solid #24943A;
+}
+table.greenTable thead th:first-child {
+  border-left: none;
 }
 
-<div>
-    <h1 class="display-6">@ViewData["Title"]</h1>
-    <a asp-action="Create" class="btn btn-success">Dodaj nowy samochód </a>
-</div>
+table.greenTable tfoot {
+  font-size: 13px;
+  font-weight: bold;
+  color: #F0F0F0;
+  background: #24943A;
+  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #24943A 100%);
+  border-top: 1px solid #24943A;
+}
+table.greenTable tfoot td {
+  font-size: 13px;
+}
+table.greenTable tfoot .links {
+  text-align: right;
+}
+table.greenTable tfoot .links a{
+  display: inline-block;
+  background: #FFFFFF;
+  color: #24943A;
+  padding: 2px 8px;
+  border-radius: 5px;
+} 
+ <meta name="viewport" content="width=device-width" />  
+<title>Index</title>  
+<style type="text/css">  
+    </style>  
+    </head>  
+    <body>  
+    <table class="greenTable">
+<thead>
+<tr>
+<th>Marka</th>
+<th>Model</th>
+<th>Rok produkcji</th>
+<th>Rodzaj paliwa</th>
+</tr>
+</thead>
+<tbody>
+    @foreach (var item in Model)  
+   {  
+       <tr>  
+           <td>@item.CarBrand</td>  
+           <td>@item.CarModelName<td>  
+           <td>@item.YearOfProduction<td>  
+           <td>@item.Fuel</td>    
+        </tr>  
+    }
+    </tbody>
+</table>
+       </body>  
+</html>
+ 
