--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -23,13 +23,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Strona główna</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Register" asp-action="Index">Rejestracja</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Dostępne samochody</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Dodaj samochód</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AddCar" asp-action="Index">Dodaj samochód</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Dodaj klienta</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AddClient" asp-action="Index">Dodaj klienta</a>
                         </li>
                     </ul>
                 </div>
