changing permissions for pages and style for pages

--- a/CarRental/Views/AddCar/Index.cshtml
+++ b/CarRental/Views/AddCar/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div>
-    <h1 class="display-6">@ViewData["Title"]</h1>
-    <a asp-action="Create" class="btn btn-success">Dodaj nowy samochód </a>
+    <h1 class="display-6 text-warning">@ViewData["Title"]</h1>
+    <a asp-action="Create" class="btn btn-warning">Dodaj nowy samochód </a>
 </div>
