--- a/CarRental/Views/AddClient/Create.cshtml
+++ b/CarRental/Views/AddClient/Create.cshtml
@@ -3,54 +3,54 @@
     ViewData["Title"] = "Dodaj klienta";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class = "text-warning">@ViewData["Title"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" method="POST">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                <label asp-for="FirstName" class="control-label text-warning"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                <label asp-for="LastName" class="control-label text-warning"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label text-warning"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RentalCar" class="control-label"></label>
+                <label asp-for="RentalCar" class="control-label text-warning"></label>
                 <input asp-for="RentalCar" class="form-control" />
                 <span asp-validation-for="RentalCar" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
+                <label asp-for="PhoneNumber" class="control-label text-warning"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RentalDate" class="control-label"></label>
-                <input asp-for="RentalDate" class="form-control" />
+                <label asp-for="RentalDate" class="control-label text-warning"></label>
+                <input asp-for="RentalDate" class="form-control"/>
                 <span asp-validation-for="RentalDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EndDate" class="control-label"></label>
+                <label asp-for="EndDate" class="control-label text-warning"></label>
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Dodaj" class="btn btn-primary" />
+                <input type="submit" value="Dodaj" class="btn btn-warning"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Powrót do listy</a>
+    <a asp-action="Index">Anuluj</a>
 </div>
