--- a/CarRental/Views/AddClient/Index.cshtml
+++ b/CarRental/Views/AddClient/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div>
-    <h1 class="display-6">@ViewData["Title"]</h1>
-    <a asp-action="Create" class="btn btn-success">Dodaj nowego klienta </a>
+    <h1 class="display-6 text-warning">@ViewData["Title"]</h1>
+    <a asp-action="Create" class="btn btn-warning">Dodaj nowego klienta </a>
 </div>
