--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Witamy w wypożyczalni samochodowej</h1>
-    <p>Wypożycz swój wymarzony samochód i podróżuj w świat!</a>.</p>
+    <h1 class="display-4 text-warning">Witamy w wypożyczalni samochodowej</h1>
+    <p class = "text-warning">Wypożycz swój wymarzony samochód i podróżuj w świat!</a>.</p>
 </div>
