--- a/CarRental/Views/AddClient/Index.cshtml
+++ b/CarRental/Views/AddClient/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Dodaj klienta";
+    ViewData["Title"] = "Rezerwacja";
 }
 
 <div>
     <h1 class="display-6 text-warning">@ViewData["Title"]</h1>
-    <a asp-action="Create" class="btn btn-warning">Dodaj nowego klienta </a>
+    <a asp-action="Create" class="btn btn-warning">Zarezerwuj</a>
 </div>
