--- a/CarRental/Views/Home/Index.cshtml
+++ b/CarRental/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4 text-warning">Witamy w wypożyczalni samochodowej</h1>
-    <p class = "text-warning">Wypożycz swój wymarzony samochód i podróżuj w świat!</a>.</p>
+    <p class = "text-warning">Wypożycz swój wymarzony samochód i wyrusz w świat!</p>
 </div>
