--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-warning" asp-area="" asp-controller="AddCar" asp-action="Index">Dodaj samochód</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-warning" asp-area="" asp-controller="AddClient" asp-action="Index">Dodaj klienta</a>
+                            <a class="nav-link text-warning" asp-area="" asp-controller="AddClient" asp-action="Index">Rezerwacja</a>
                         </li>
                     </ul>
                 </div>
