--- a/CarRental/Views/Shared/_Layout.cshtml
+++ b/CarRental/Views/Shared/_Layout.cshtml
@@ -25,15 +25,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="Car" asp-action="Index">Dostępne samochody</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-warning" asp-area="" asp-controller="Client" asp-action="Index">Aktualni klienci</a>
-                        </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-warning" asp-area="" asp-controller="Client" asp-action="Index">Aktualni klienci</a>
+                            </li>
+                        }
+                        @if(User.Identity.IsAuthenticated){
                         <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="AddCar" asp-action="Index">Dodaj samochód</a>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-warning" asp-area="" asp-controller="AddClient" asp-action="Index">Rezerwacja</a>
-                        </li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-warning" asp-area="" asp-controller="AddClient" asp-action="Index">Rezerwacja</a>
+                            </li>
+                        }
                     </ul>
                 </div>
                 <partial name="_LoginPartial" />
