--- a/CarRental/Views/ClientModels/Edit.cshtml
+++ b/CarRental/Views/ClientModels/Edit.cshtml
@@ -1,14 +1,19 @@
 ﻿@model CarRental.Models.ClientModel
+
 @{
-    ViewData["Title"] = "Dodaj klienta";
+    ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class = "text-warning">@ViewData["Title"]</h1>
+<h1 text-warning>Edytuj</h1>
+
+<h4>ClientModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="POST">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label text-warning"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -36,7 +41,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="RentalDate" class="control-label text-warning"></label>
-                <input asp-for="RentalDate" class="form-control"/>
+                <input asp-for="RentalDate" class="form-control" />
                 <span asp-validation-for="RentalDate" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,12 +50,16 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Dodaj" class="btn btn-warning"/>
+                <input type="submit" value="Zapisz" class="btn btn-warning" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Anuluj</a>
+    <a asp-action="Index">Wróć do listy</a>
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
